--- a/UserModule/UserModule.csproj
+++ b/UserModule/UserModule.csproj
@@ -17,4 +17,8 @@
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Contracts\Contracts.csproj" />
+    </ItemGroup>
+
 </Project>
