--- a/ModularMonolithApi/ModularMonolithApi.csproj
+++ b/ModularMonolithApi/ModularMonolithApi.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\OrderModule\OrderModule.csproj" />
       <ProjectReference Include="..\ProductModule\ProductModule.csproj" />
       <ProjectReference Include="..\UserModule\UserModule.csproj" />
     </ItemGroup>
