Add auth module and include username / password authorisation

--- a/ModularMonolithApi/ModularMonolithApi.csproj
+++ b/ModularMonolithApi/ModularMonolithApi.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\AuthorisationModule\AuthorisationModule.csproj" />
       <ProjectReference Include="..\OrderModule\OrderModule.csproj" />
       <ProjectReference Include="..\ProductModule\ProductModule.csproj" />
       <ProjectReference Include="..\UserModule\UserModule.csproj" />
